# itworkboard-cli

./: .gitignore  00_orchestrator_master_prompt.md  AGENTS.md  CONCEPTS.md  MEMORY.md  STRATEGY.md  decomposed_orchestrator_instruction.md  manifest.json  one_shot_orchestrator_instruction.md  opencode.json  orchestrator_completion_report.md  pyproject.toml  readme.md  sources.md
archive/: orchestrator_completion_report_template.md
audit_briefs/: a01_discovery_audit.md  a04_final_cli_acceptance_audit.md
briefs/: t01_discovery_spike.md  t02_architecture_and_contracts.md  t03_cli_scaffold.md  t05_sharepoint_list_discovery.md  t06_schema_mapping_and_normalization.md  t08_agent_interface_and_json_contract.md  t09_tests_and_ci.md
config/: local.example.yaml  workboard.defaults.yaml  workboard.example.yaml
discovery/: lists.json  permission_report.md  site.json  workboard_sample_items.json  workboard_schema.json
docs/: admin_permissions.md  agent_json_contract.md  agent_usage.md  architecture.md  cli_command_contract.md  configuration.md  manager_usage.md  onboarding_agent.md  security_model.md  testing.md  troubleshooting.md
prerequisites/: azure_app_reg_checklist.md
scripts/: analyze-observations.py
session_digests/: 2026061801_live_discovery_spike_and_config_system.md  2026061802_full_cli_delivery_and_code_review.md  2026061803_cli_self_discovery_and_path_registration.md  2026061804_onboarding_and_auth_browser_auto_open.md  2026061901_agents_md_refactor_and_observation_capture_loop.md  2026061902_archive_build_phase_artifacts.md
tests/: test_agent.py  (+11 more)
(+42 files in other folders)
