[project]
name = "workboard-cli"
version = "0.1.0"
description = "Read-only CLI for querying the SharePoint IT WorkBoard"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "requests>=2.31",
  "msal>=1.28",
  "pyyaml>=6.0"
]

[project.scripts]
workboard = "workboard_cli.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "responses>=0.25"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
